# vglite_thorvg

./: .gitignore  CMakeLists.txt  README.md  TEST_COVERAGE.md  fix_lvgl_deps.py  fix_thorvg_files.py
.sisyphus/: boulder.json
.sisyphus/drafts/: new-features.md
.sisyphus/evidence/: task-01-test-baseline.txt  task-1-hello-window.txt  task-10-gl-backend-tests.txt  task-13-android-structure.txt  task-6-upload-pass.txt  task-7-map-unmap.txt  task-9-flush-pass.txt
.sisyphus/notepads/phase2-new-features/: learnings.md
.sisyphus/notepads/thorvg-v1-upgrade/: learnings.md
.sisyphus/plans/: add-gl-context-to-tests.md  extract-vglite-thorvg.md  phase2-new-features.md  remaining-work.md  thorvg-v1-upgrade.md
android/: build.gradle  build_dex.sh  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/example/vglite/: MainActivity.java  VGLite.java
android/jni/: vglite_jni.cpp
build_android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_android_gl/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_android_sw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_temp/: CMakeCache.txt
cmake/: vglite_version.h.in
docs/: THORVG_V1_MIGRATION.md
examples/: CMakeLists.txt  hello_path.c  stb_impl.cpp
examples/android/: build.gradle  settings.gradle
examples/android/app/: build.gradle
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  vglite_jni.cpp
examples/android/app/src/main/java/com/example/vglite/: MainActivity.java  VGLiteRenderer.java
examples/android/app/src/main/res/values/: strings.xml
examples/windows/: CMakeLists.txt  hello_window.c
include/: vg_lite.h
src/: vg_lite_matrix.cpp  vg_lite_tvg.cpp
tests/: CMakeLists.txt  COVERAGE_REPORT.md  TEST_COVERAGE.md  image_compare.h  stb_impl.cpp  test_canvas_buffer.cpp  test_color_formats.cpp  test_draw_vector.cpp  test_draw_vector_detail.cpp  test_dump_buffer.cpp  test_gl_backend.cpp  test_golden.cpp  test_helpers.h  test_main.cpp  test_render_to_argb1555.cpp  test_svg_render.cpp
